# angry-birds

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
assets/levels/: level1.json  level1.txt  level2.json  level3.json
src/: bird.cpp  bird.hpp  cannon.cpp  cannon.hpp  event.hpp  game.cpp  game.hpp  game_controller.cpp  game_controller.hpp  game_model.cpp  game_model.hpp  game_over.cpp  game_over.hpp  game_selector.cpp  game_selector.hpp  game_view.cpp  game_view.hpp  ground.cpp  ground.hpp  level_editor.cpp  level_editor.hpp  level_loader.cpp  level_loader.hpp  level_selector.cpp  level_selector.hpp  main.cpp  main_menu.cpp  main_menu.hpp  menu.cpp  menu.hpp  object.cpp  object.hpp  pause.cpp  pause.hpp  pig.cpp  pig.hpp  resource_manager.hpp  score.cpp  score.hpp  settings.cpp  (+12 more)
